# LatentGP

./: .gitignore  LICENSE  README.md  config.py  data.py  kernel.py  main.py  model.py  pyproject.toml  requirements.txt  simulator.py
configs/: real_add_lrn.yaml  real_lrn.yaml  sim_additive.yaml
